# OpenViking

./: .gitignore  .gitmodules  README.md  eval_results.json  opengauss-minimal.patch  play_recorder.py  pyproject.toml
.github/workflows/: _build.yml  clawhub-dev-release.yml  codeql.yml  publish.yml  rust-cli.yml  test.yml
benchmark/locomo/: EVAL_FRAMEWORK_DESIGN.md  config.example.yaml  run_eval.py
bot/: README.md  pyproject.toml
bot/deploy/: Dockerfile
bot/examples/: hook_integration_example.py
bot/specs/: 01-project-overview.md  02-agent.md  03-tools.md  04-channels.md  07-session.md  11-sandbox-integration.md  12-tui.md  13-console.md  15-hooks.md  16-sandbox-backends.md  17-vke-deployment.md  README.md  code-search-best-practices.md
bot/workspace/: TOOLS.md
docs/: install-test-cases.md  opengauss-adapter-guide.md
docs/design/: openclaw-plugin-install-review.md  request_trace.md  setup-wizard-plan.md
examples/: ov.conf.example
examples/cloud/: ov.conf.example
examples/memorybench-openviking/: README.md  install_openviking_provider.py  openviking_provider.ts  run_openviking_memorybench.sh
examples/openclaw-memory-plugin/: INSTALL-ZH.md  INSTALL.md  README.md  RELEASE.md  (+6 more)
openclaw-plugin/: README.md  conftest.py  pyproject.toml  requirements.txt  test_config.json
openclaw-plugin/config/: settings.py
openclaw-plugin/tests/: _pipeline.py
openclaw-plugin/tests/clawhub/: test_local_install.py  test_remote_install.py
openclaw-plugin/utils/: config_manager.py  process_manager.py  profile_manager.py
openviking/: async_client.py  sync_client.py
(+361 files in other folders)
